<resources>
    <string name="app_name">RoomExample</string>
    <string name="hint_student_name">Student Name</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="dob">DOB</string>
    <string name="postal_address">Postal Address</string>
    <string name="submit">Submit</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="reg_form">Student Registration Form</string>
    <string name="title_activity_show_students">ShowStudentsActivity</string>

    <array name="cities">
        <item>Ajmer</item>
        <item>Alwar</item>
        <item>Bikaner</item>
        <item>Barmer</item>
        <item>Jaipur</item>
        <item>Udaipur</item>
        <item>Kota</item>
    </array>

    <array name="course">
        <item>MCA</item>
        <item>BCA</item>
        <item>B.Tech</item>
        <item>M.Tech</item>
        <item>BSC</item>
        <item>BA</item>

    </array>
</resources>
